force-app/main/default/objects/Salesforce_Support_Request__c/Salesforce_Support_Request__c.object-meta.xml
<CustomObject>
    <description>For requesting or the reporting of new or broken existing features, errors and issues relating to the TaskEasy Salesforce instance.</description>
    <label>Support Request</label>
    <nameField>
        <displayFormat>SRN-{0000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>