force-app/main/default/objects/Salesforce_Support_Request__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <description>Actor (User Story)</description>
    <label>Actor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>