force-app/main/default/objects/Salesforce_Support_Request__c/fields/Actual_Hours_to_Estimated__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours_to_Estimated__c</fullName>
    <description>Logged Hours / Estimated Hours</description>
    <formula>Logged_Hours__c / Estimated_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Hours to Estimated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>