force-app/main/default/objects/Salesforce_Support_Request__c/fields/Added_to_Jira__c.field-meta.xml
<CustomField>
    <fullName>Added_to_Jira__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added to Jira</label>
    <type>Checkbox</type>
</CustomField>