force-app/main/default/objects/Salesforce_Support_Request__c/fields/Assigned_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Sprint__c</fullName>
    <label>Assigned Sprint</label>
    <length>120</length>
    <type>Text</type>
</CustomField>