force-app/main/default/objects/Salesforce_Support_Request__c/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specifies the admin who is assigned to this Support Request</description>
    <label>Assigned to</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>00e6g000001Fdpp</value>
        </filterItems>
        <infoMessage>System Admin Only</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Salesforce_Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>