force-app/main/default/objects/Salesforce_Support_Request__c/fields/Business_Value__c.field-meta.xml
<CustomField>
    <fullName>Business_Value__c</fullName>
    <inlineHelpText>Add the Business Value for this Feature Request for team review</inlineHelpText>
    <label>Business Value</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>