force-app/main/default/objects/Salesforce_Support_Request__c/fields/Comments_to_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Comments_to_Stakeholder__c</fullName>
    <description>Comments sent to stakeholder when issue is updated</description>
    <inlineHelpText>Comments sent to stakeholder when issue is updated. Sent automatically upon save.</inlineHelpText>
    <label>Send Update to Stakeholder</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>