force-app/main/default/objects/Salesforce_Support_Request__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>Completion Date of this support request</description>
    <inlineHelpText>Completion Date of this support request</inlineHelpText>
    <label>Completion Date</label>
    <type>DateTime</type>
</CustomField>