force-app/main/default/objects/Salesforce_Support_Request__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Captures user entered detail value from the screen flow when creating a new support request</description>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>