force-app/main/default/objects/Salesforce_Support_Request__c/fields/Doc_Sheet_Link__c.field-meta.xml
<CustomField>
    <fullName>Doc_Sheet_Link__c</fullName>
    <label>Doc/Sheet Link</label>
    <type>Url</type>
</CustomField>