force-app/main/default/objects/Salesforce_Support_Request__c/fields/Due_By__c.field-meta.xml
<CustomField>
    <fullName>Due_By__c</fullName>
    <description>Due by date (end of related sprint date)</description>
    <formula>Related_Sprint__r.Sprint_End_Date__c</formula>
    <inlineHelpText>The day this item is due.</inlineHelpText>
    <label>Due By:</label>
    <type>Date</type>
</CustomField>