force-app/main/default/objects/Salesforce_Support_Request__c/fields/Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours__c</fullName>
    <description>Estimated time that this support request will take to complete.</description>
    <inlineHelpText>Estimated time that this support request will take to complete.</inlineHelpText>
    <label>Estimated Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>