force-app/main/default/objects/Salesforce_Support_Request__c/fields/Final_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Final_Resolution__c</fullName>
    <description>Final resolution for the support request</description>
    <label>Final Resolution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>