force-app/main/default/objects/Salesforce_Support_Request__c/fields/In_Current_Sprint__c.field-meta.xml
<CustomField>
    <fullName>In_Current_Sprint__c</fullName>
    <description>Formula to determine if the support request falls within the current sprint timeline.</description>
    <formula>IF(
AND(Related_Sprint__r.Sprint_Start_Date__c &lt;= TODAY(),
TODAY() &lt;= Related_Sprint__r.Sprint_End_Date__c),
true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula to determine if the support request falls within the current sprint timeline.</inlineHelpText>
    <label>In Current Sprint</label>
    <type>Checkbox</type>
</CustomField>