force-app/main/default/objects/Salesforce_Support_Request__c/fields/Logged_Hours__c.field-meta.xml
<CustomField>
    <fullName>Logged_Hours__c</fullName>
    <description>Logged work hours for this support request</description>
    <inlineHelpText>Logged work hours for this support request</inlineHelpText>
    <label>Logged Hours</label>
    <summarizedField>Salesforce_Support_Work_Log__c.Duration__c</summarizedField>
    <summaryForeignKey>Salesforce_Support_Work_Log__c.Salesforce_Support_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>