force-app/main/default/objects/Salesforce_Support_Request__c/fields/Notify_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Notify_Stakeholder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to trigger stakeholder notification of issue status</description>
    <inlineHelpText>Checkbox to trigger stakeholder notification of issue status</inlineHelpText>
    <label>Send Status Update to Stakeholder</label>
    <type>Checkbox</type>
</CustomField>