force-app/main/default/objects/Salesforce_Support_Request__c/fields/Other_Link__c.field-meta.xml
<CustomField>
    <fullName>Other_Link__c</fullName>
    <label>Other Link</label>
    <type>Url</type>
</CustomField>