force-app/main/default/objects/Salesforce_Support_Request__c/fields/Proposed_Solution__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Solution__c</fullName>
    <description>Proposed Solution for the support request.</description>
    <label>Proposed Solution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>