force-app/main/default/objects/Salesforce_Support_Request__c/fields/Related_Salesforce_Support_Request__c.field-meta.xml
<CustomField>
    <fullName>Related_Salesforce_Support_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Request (If applicable)</description>
    <inlineHelpText>Related Request (If applicable)</inlineHelpText>
    <label>Related To</label>
    <referenceTo>Salesforce_Support_Request__c</referenceTo>
    <relationshipLabel>Related Requests</relationshipLabel>
    <relationshipName>Related_Salesforce_Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>