force-app/main/default/objects/Salesforce_Support_Request__c/fields/Related_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Related_Sprint__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Sprint that this Salesforce Support Request is part of.</description>
    <inlineHelpText>The Sprint that this Salesforce Support request is part of.</inlineHelpText>
    <label>Related Sprint</label>
    <referenceTo>Salesforce_Support_Sprint__c</referenceTo>
    <relationshipName>Salesforce_Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>