force-app/main/default/objects/Salesforce_Support_Request__c/fields/Request_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Request_Approved_By__c</fullName>
    <label>Request Approved By</label>
    <length>120</length>
    <type>Text</type>
</CustomField>