force-app/main/default/objects/Salesforce_Support_Request__c/fields/Request_Description__c.field-meta.xml
<CustomField>
    <fullName>Request_Description__c</fullName>
    <label>Request Description</label>
    <type>TextArea</type>
</CustomField>