force-app/main/default/objects/Salesforce_Support_Request__c/fields/Request_Modifications__c.field-meta.xml
<CustomField>
    <fullName>Request_Modifications__c</fullName>
    <description>Modified Details provided by the stakeholder after the original request.</description>
    <label>Request Modifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>