force-app/main/default/objects/Salesforce_Support_Request__c/fields/Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Request_Number__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; Id,Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Number</label>
    <type>Text</type>
</CustomField>