force-app/main/default/objects/Salesforce_Support_Request__c/fields/Requires_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Requires_Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Escalation?</label>
    <type>Checkbox</type>
</CustomField>