force-app/main/default/objects/Salesforce_Support_Request__c/fields/Salesforce_Support_Related_Epic__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Support_Related_Epic__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Salesforce Support related Epic</description>
    <inlineHelpText>Related Epic (If applicable)</inlineHelpText>
    <label>Related Epic</label>
    <referenceTo>Salesforce_Support_Epic__c</referenceTo>
    <relationshipName>Salesforce_Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>