force-app/main/default/objects/Salesforce_Support_Request__c/fields/Sprint_Number__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Number__c</fullName>
    <description>Displays the sprint that the support request is assigned to.</description>
    <formula>Related_Sprint__r.Name</formula>
    <label>Sprint Number</label>
    <type>Text</type>
</CustomField>