force-app/main/default/objects/Salesforce_Support_Request__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <description>Salesforce Support Request Due Date</description>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>