force-app/main/default/objects/Salesforce_Support_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>For tracking the status of Support Requests</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backlog</fullName>
                <default>true</default>
                <label>Backlog</label>
            </value>
            <value>
                <fullName>Closed Won&apos;t Do</fullName>
                <label>Won&apos;t Do</label>
            </value>
            <value>
                <fullName>Flagged</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>To Do</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
                <label>Deployed / Done</label>
            </value>
            <value>
                <fullName>Waiting</fullName>
                <isActive>false</isActive>
                <label>Waiting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>