force-app/main/default/objects/Salesforce_Support_Request__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <description>Reason for the Current Request Status</description>
    <inlineHelpText>Reason for the Current Request Status</inlineHelpText>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Story</fullName>
                <label>Pending User Story Approval</label>
            </value>
            <value>
                <fullName>Related Request</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Can&apos;t Do</fullName>
            </value>
            <value>
                <fullName>Request Cancelled</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Duplicate Issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Deployed From Sandbox</fullName>
            </value>
            <value>
                <fullName>Deployed From Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>