force-app/main/default/objects/Salesforce_Support_Request__c/fields/Story_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Story_Approval_Date__c</fullName>
    <description>The date that the user story was approved.</description>
    <inlineHelpText>The date that the user story was approved.</inlineHelpText>
    <label>Story Approval Date</label>
    <type>DateTime</type>
</CustomField>