force-app/main/default/objects/Salesforce_Support_Request__c/fields/Story_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Story_Feedback__c</fullName>
    <description>User story feedback received from stakeholder</description>
    <inlineHelpText>Questions / Feedback about the current user story.</inlineHelpText>
    <label>Story Feedback</label>
    <type>TextArea</type>
</CustomField>