force-app/main/default/objects/Salesforce_Support_Request__c/fields/Story_Name__c.field-meta.xml
<CustomField>
    <fullName>Story_Name__c</fullName>
    <description>Name / Short description of the User Story</description>
    <label>Story Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>