force-app/main/default/objects/Salesforce_Support_Request__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <description>User Story for support request</description>
    <label>User Story</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>