force-app/main/default/objects/Salesforce_Support_Request__c/fields/User_Story_Comments__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Comments__c</fullName>
    <description>Stakeholder comments and questions about the user story.</description>
    <inlineHelpText>Please provide additional details if this User Story requires further review.</inlineHelpText>
    <label>(DEL) Story Comments</label>
    <type>TextArea</type>
</CustomField>