force-app/main/default/objects/Salesforce_Support_Request__c/fields/User_Story_Status__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Status__c</fullName>
    <description>Status of a user story. whether it needs to be reviewed or is approved.</description>
    <inlineHelpText>Select &quot;Approved&quot; to approve the User Story. If the story needs further review select &quot;Needs Review&quot; and leave a comment in the User Story comment box detailing any needed changes or concerns.</inlineHelpText>
    <label>User Story Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>