force-app/main/default/objects/Salesforce_Support_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Requesting_Team__c</columns>
    <columns>Request_Description__c</columns>
    <columns>Status__c</columns>
    <columns>Age__c</columns>
    <columns>Other_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>