force-app/main/default/objects/Salesforce_Support_Request__c/listViews/Backlog.listView-meta.xml
<ListView>
    <fullName>Backlog</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Request_Description__c</columns>
    <columns>Requesting_Team__c</columns>
    <columns>Details__c</columns>
    <columns>Added_to_Jira__c</columns>
    <columns>Requires_Escalation__c</columns>
    <columns>Status__c</columns>
    <columns>Related_Sprint__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Backlog</value>
    </filters>
    <filters>
        <field>Assigned_Sprint__c</field>
        <operation>equals</operation>
    </filters>
    <label>Backlog</label>
</ListView>