force-app/main/default/objects/Salesforce_Support_Request__c/listViews/Backlog_Needs_Review.listView-meta.xml
<ListView>
    <fullName>Backlog_Needs_Review</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Requesting_Team__c</columns>
    <columns>Details__c</columns>
    <columns>Related_Sprint__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Backlog</value>
    </filters>
    <filters>
        <field>Status_Reason__c</field>
        <operation>notEqual</operation>
        <value>Ready</value>
    </filters>
    <label>Backlog - Needs Review</label>
</ListView>