force-app/main/default/objects/Salesforce_Support_Request__c/listViews/Backlog_User_Stories.listView-meta.xml
<ListView>
    <fullName>Backlog_User_Stories</fullName>
    <columns>NAME</columns>
    <columns>Requesting_Team__c</columns>
    <columns>Actor__c</columns>
    <columns>Story_Name__c</columns>
    <columns>Acceptance_Criteria__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Backlog</value>
    </filters>
    <label>Backlog - User Stories</label>
</ListView>