force-app/main/default/objects/Salesforce_Support_Request__c/listViews/Blocked_Issues.listView-meta.xml
<ListView>
    <fullName>Blocked_Issues</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Request_Description__c</columns>
    <columns>Requesting_Team__c</columns>
    <columns>Details__c</columns>
    <columns>Requires_Escalation__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Blocked</value>
    </filters>
    <label>Blocked Issues</label>
</ListView>