force-app/main/default/objects/Salesforce_Support_Request__c/listViews/Blocked_Requests.listView-meta.xml
<ListView>
    <fullName>Blocked_Requests</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Requesting_Team__c</columns>
    <columns>Request_Description__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Reason__c</columns>
    <columns>Assigned_Sprint__c</columns>
    <columns>Related_Sprint__c</columns>
    <columns>Estimated_Hours__c</columns>
    <columns>Age__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Blocked</value>
    </filters>
    <label>Blocked Requests</label>
</ListView>