force-app/main/default/objects/Salesforce_Support_Request__c/listViews/Changed_in_Production_Current_Sprint.listView-meta.xml
<ListView>
    <fullName>Changed_in_Production_Current_Sprint</fullName>
    <columns>NAME</columns>
    <columns>Request_Description__c</columns>
    <columns>Related_Sprint__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>Final_Resolution__c</columns>
    <columns>Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Deployed</value>
    </filters>
    <filters>
        <field>Status_Reason__c</field>
        <operation>equals</operation>
        <value>Deployed From Production</value>
    </filters>
    <filters>
        <field>In_Current_Sprint__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Changed in Production (Current Sprint)</label>
</ListView>