force-app/main/default/objects/Salesforce_Support_Request__c/listViews/Current_Sprint.listView-meta.xml
<ListView>
    <fullName>Current_Sprint</fullName>
    <columns>NAME</columns>
    <columns>Requesting_Team__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Request_Description__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>Related_Sprint__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>In_Current_Sprint__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Current Sprint</label>
</ListView>