force-app/main/default/objects/Salesforce_Support_Request__c/listViews/Deployed.listView-meta.xml
<ListView>
    <fullName>Deployed</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Request_Description__c</columns>
    <columns>Requesting_Team__c</columns>
    <columns>Details__c</columns>
    <columns>Added_to_Jira__c</columns>
    <columns>Requires_Escalation__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Deployed</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>Deployed</label>
</ListView>