force-app/main/default/objects/Salesforce_Support_Request__c/listViews/Next_Sprint.listView-meta.xml
<ListView>
    <fullName>Next_Sprint</fullName>
    <columns>Requesting_Team__c</columns>
    <columns>Story_Name__c</columns>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Request_Description__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>Related_Sprint__c</columns>
    <columns>Age__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>In_Current_Sprint__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed Won&apos;t Do,Deployed</value>
    </filters>
    <label>Next Sprint</label>
</ListView>