force-app/main/default/objects/Salesforce_Support_Request__c/listViews/Open_Client_Ops.listView-meta.xml
<ListView>
    <fullName>Open_Client_Ops</fullName>
    <columns>NAME</columns>
    <columns>Requesting_Team__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Assigned_to__c</columns>
    <columns>Story_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Reason__c</columns>
    <columns>Request_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Requesting_Team__c</field>
        <operation>equals</operation>
        <value>Client,Operations</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed Won&apos;t Do,Deployed</value>
    </filters>
    <label>Open - Client Ops</label>
</ListView>