force-app/main/default/objects/Salesforce_Support_Request__c/listViews/Request_Queue.listView-meta.xml
<ListView>
    <fullName>Request_Queue</fullName>
    <columns>Request_Number__c</columns>
    <columns>Request_Description__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Requires_Escalation__c</columns>
    <filterScope>Mine</filterScope>
    <label>Request Queue</label>
</ListView>