force-app/main/default/objects/Salesforce_Support_Request__c/listViews/Sprint_Planning.listView-meta.xml
<ListView>
    <fullName>Sprint_Planning</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Requesting_Team__c</columns>
    <columns>Story_Name__c</columns>
    <columns>Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Backlog,Blocked</value>
    </filters>
    <label>Sprint Planning</label>
</ListView>